--- a/src/components/editor/parts/shelf.scss
+++ b/src/components/editor/parts/shelf.scss
@@ -9,7 +9,8 @@
   border-color: $mdc-theme-primary;
   border-width: medium;
   border-style: solid;
-  margin: 16px;
+  margin-top: 16px;
+  margin-bottom: auto;
 }
 
 hr {
@@ -18,17 +19,14 @@ hr {
 }
 
 .LevelObjects {
-  // background-color: #FF8888;
   padding: 8px;
 }
 
 .Tools {
-  // background-color: #88FF88;
   padding: 8px;
 }
 
 .LevelResizer {
-  // background-color: #8888FF;
   padding: 8px;
 }
 
@@ -55,14 +53,14 @@ hr {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding-bottom: 8px;
-  padding-left: 8px;
-  padding-right: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
 }
 
 .dimension-value {
-  margin: 4px;
+  margin: 4px 16px;
   font-family: 'Roboto';
 }
 
